<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.prova.noteapp.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sortAz"
                android:title="@string/sort_option0"/>
            <item
                android:id="@+id/sortZa"
                android:title="@string/sort_option1"/>
            <item
                android:id="@+id/sortMod"
                android:title="@string/sort_option2"/>
            <item
                android:id="@+id/sortModInv"
                android:title="@string/sort_option3"/>
            <item
                android:id="@+id/sortCre"
                android:title="@string/sort_option4"/>
            <item
                android:id="@+id/sortCreInv"
                android:title="@string/sort_option5"/>

        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
</menu>
